[gd_scene load_steps=10 format=3 uid="uid://dpuhq3hlekujc"]

[ext_resource type="Script" uid="uid://drm2ab77bpe7a" path="res://scripts/levelselect.gd" id="1_nr6vh"]
[ext_resource type="Texture2D" uid="uid://cr42wl33w52rg" path="res://assets/background.png" id="1_r4dpw"]
[ext_resource type="Texture2D" uid="uid://dssbsqxjf6m1j" path="res://assets/PNG/level01.png" id="2_f6446"]
[ext_resource type="Texture2D" uid="uid://8ktatmph24qo" path="res://assets/PNG/level02.png" id="3_g1530"]
[ext_resource type="Texture2D" uid="uid://cgc40b6jkwls4" path="res://assets/PNG/level03.png" id="4_du5u0"]
[ext_resource type="FontFile" uid="uid://blbvhpm4wbg3v" path="res://assets/font.ttf" id="4_ge46x"]
[ext_resource type="Texture2D" uid="uid://c38bwtbfw40lb" path="res://assets/PNG/level04.png" id="5_nr6vh"]
[ext_resource type="AudioStream" uid="uid://daywqslfspi3u" path="res://assets/ralf.mp3" id="8_2saeg"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_engid"]
texture = ExtResource("1_r4dpw")
modulate_color = Color(0.2484, 0.2484, 0.2484, 1)

[node name="levelselect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nr6vh")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_engid")

[node name="buttons" type="Node" parent="."]

[node name="level01" type="TextureButton" parent="buttons"]
offset_left = 178.0
offset_top = 125.0
offset_right = 1453.0
offset_bottom = 842.0
scale = Vector2(0.3, 0.3)
texture_normal = ExtResource("2_f6446")
texture_pressed = ExtResource("2_f6446")
texture_hover = ExtResource("2_f6446")
texture_focused = ExtResource("2_f6446")
stretch_mode = 0

[node name="Label" type="Label" parent="buttons/level01"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -466.5
offset_top = 13.0
offset_right = 466.5
offset_bottom = 143.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_ge46x")
theme_override_font_sizes/font_size = 120
text = "Track 1: Rapid Raceway"
horizontal_alignment = 1
vertical_alignment = 1

[node name="level02" type="TextureButton" parent="buttons"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -550.0
offset_top = 122.0
offset_right = 725.0
offset_bottom = 839.0
grow_horizontal = 0
scale = Vector2(0.3, 0.3)
texture_normal = ExtResource("3_g1530")
texture_pressed = ExtResource("3_g1530")
texture_hover = ExtResource("3_g1530")
texture_focused = ExtResource("3_g1530")
stretch_mode = 0

[node name="Label" type="Label" parent="buttons/level02"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -466.5
offset_top = 13.0
offset_right = 466.5
offset_bottom = 143.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_ge46x")
theme_override_font_sizes/font_size = 120
text = "Track 2: Crazy Circuit"
horizontal_alignment = 1
vertical_alignment = 1

[node name="level03" type="TextureButton" parent="buttons"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 183.0
offset_top = -300.0
offset_right = 1458.0
offset_bottom = 417.0
grow_vertical = 0
scale = Vector2(0.3, 0.3)
texture_normal = ExtResource("4_du5u0")
texture_pressed = ExtResource("4_du5u0")
texture_hover = ExtResource("4_du5u0")
texture_focused = ExtResource("4_du5u0")
stretch_mode = 0

[node name="Label" type="Label" parent="buttons/level03"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -466.5
offset_top = 13.0
offset_right = 466.5
offset_bottom = 143.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_ge46x")
theme_override_font_sizes/font_size = 120
text = "Track 3: Speedy Strip"
horizontal_alignment = 1
vertical_alignment = 1

[node name="level04" type="TextureButton" parent="buttons"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -548.0
offset_top = -294.0
offset_right = 727.0
offset_bottom = 423.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.3, 0.3)
texture_normal = ExtResource("5_nr6vh")
texture_pressed = ExtResource("5_nr6vh")
texture_hover = ExtResource("5_nr6vh")
texture_focused = ExtResource("5_nr6vh")
stretch_mode = 0

[node name="Label" type="Label" parent="buttons/level04"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -466.5
offset_top = 13.0
offset_right = 466.5
offset_bottom = 143.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_ge46x")
theme_override_font_sizes/font_size = 120
text = "Track 4: Turbo Track"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -466.5
offset_right = 466.5
offset_bottom = 130.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("4_ge46x")
theme_override_font_sizes/font_size = 110
text = "Choose a race track"
horizontal_alignment = 1
vertical_alignment = 1

[node name="audio_ralf" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_2saeg")

[connection signal="button_down" from="buttons/level01" to="." method="on_level_01_button_down"]
[connection signal="button_down" from="buttons/level02" to="." method="on_level_02_button_down"]
[connection signal="button_down" from="buttons/level03" to="." method="on_level_03_button_down"]
[connection signal="button_down" from="buttons/level04" to="." method="on_level_04_button_down"]
